<resources>
    <string name="app_name">Learn It</string>
    <string name="options_title">Options</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="loading_title">Loading</string>
    <string name="this_week_lessons">This Week Lessons</string>
    <string name="uncompleted_lessons_title">Uncompleted Lessons</string>
    <string name="classes_title">Classes</string>
    <string name="sign_in_title">Sign In</string>
    <string name="continue_title">Continue</string>
    <string name="user_name_title">User Name</string>
    <string name="password_title">Password</string>
    <string name="email_title">Email</string>
    <string name="repeat_password_title">Repeat Password</string>
    <string name="sign_in_sub_title">Enter your email and password to enter the system</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_sub_title">Enter your email, username and password the enter the system</string>
    <string name="add_lesson_title">Add Lesson</string>
    <string name="add_lesson_sub_title">Enter the id of the lesson and enter your preference</string>
    <string name="lesson_id_title">Lesson Id</string>
    <string name="short_title">Short</string>
    <string name="medium_title">Medium</string>
    <string name="long_title">Long</string>
    <string name="lesson_time_title">Lesson time</string>
    <string name="lesson_per_week_title">Lessons per week</string>
    <string name="pattern_title">Pattern</string>
    <string name="lesson_order_linear">Text Text, Question Question…</string>
    <string name="lesson_order_unique">Text Question, Text Question…</string>
    <string name="type_title">Type</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome_message">Welcome to Learn It</string>
    <string name="login_title">Login</string>
    <string name="name_title">Full Name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="password_too_short">Password too short</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="signout_title">Signout</string>
    <string name="help_and_settings_title"><![CDATA[Help & Settings]]></string>
    <string name="enter_class_id">Enter the Id of the class</string>
    <string name="class_id">Class Id</string>
    <string name="join">Join</string>
    <string name="join_class_title">Join Class</string>
    <string name="class_not_found">Your class not found</string>
    <string name="no_classes_placeholder">No Classes Added Yet!</string>
    <string name="birthday_title">Birthday</string>
    <string name="enter_birthday">Enter birthday</string>
    <string name="favorite_movie_genre_title">Favorite Movie Genre</string>
    <string name="number_brothers_title">Number Of Brothers</string>
    <string name="female_title">Female</string>
    <string name="male_title">Male</string>
    <string name="favorite_lesson_title">Favorite Lesson</string>
    <string name="user_profile_description">This data will help us build for you a custom student userProfile, don\'t worry, we will never public this data with your name.</string>
    <string name="please_enter_favorite_movie">Please enter your favorite movie</string>
    <string name="please_enter_favorite_lesson">Please enter your favorite lesson</string>
    <string name="please_enter_brothers_number">Please enter the number of your brothers</string>
    <string name="please_enter_birtday">Please enter your birthday</string>
    <string name="you_must_create_profile">Creating Profile Is Necessary</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="you_alredy_in_this_class">You Already In This Class!</string>
    <string name="lesson_profile_description">This data will help us build a better learning program for you, don\'t worry, we will never public
        this data with your name.</string>
    <string name="how_much_love_title">How much do you love this subject?</string>
    <string name="lesson_duration_title">Lesson duration</string>
    <string name="times_a_week_title">Times a week</string>
    <string name="how_good_you_are_in_subject_title">How good you are in this subject?</string>
    <string name="texts_percentage_title">Texts percentage</string>
    <string name="videos_percentage_title">Videos percentage</string>
    <string name="simulations_percentage_title">Simulation percentage</string>
    <string name="you_must_create_lesson_profile">You must create a lesson profile</string>
    <string name="create_user_profile_title">Create Profile</string>
    <string name="create_lesson_profile_title">Create Lesson Profile</string>
    <string name="exit_warning">Exit Warning</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="application_icon">application icon</string>
    <string name="image_placeholder">Image placeholder</string>
    <string name="class_image">Class image</string>
    <string name="user_profile">User profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_placeholder">text placeholder</string>

</resources>
