<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/help_and_settings_title">
        <menu>
            <item
                android:id="@+id/editProfileNevButton"
                android:title="@string/edit_profile_title"/>

            <item
                android:id="@+id/settingsNevButton"
                android:title="@string/settings_title"/>

            <item
                android:id="@+id/aboutNevButton"
                android:title="@string/about_title"/>

            <item
                android:id="@+id/signoutNevButton"
                android:title="@string/signout_title"/>
        </menu>
    </item>

</menu>
