<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppThemeLayouts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:id="@+id/noClassesPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_sentiment_neutral"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/no_classes_placeholder"
            android:textColor="@color/colorBackgroundText"
            android:textSize="23sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weekLessonsTextView"
                style="@style/CardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_week_lessons"/>

            <android.support.v7.widget.CardView
                android:id="@+id/weekLessonsCardView"
                style="@style/CardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/weekLessonsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/uncompletedLessonsTextView"
                style="@style/CardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uncompleted_lessons_title"/>

            <android.support.v7.widget.CardView
                android:id="@+id/uncompletedLessonsCardView"
                style="@style/CardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/uncompletedLessonsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/classesTextView"
                style="@style/CardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classes_title"/>

            <android.support.v7.widget.CardView
                android:id="@+id/classesCardView"
                style="@style/CardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/classesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>